Fixed resizing on mobile

--- a/src/component/LandingPageV2/WhoWeAre/style.css
+++ b/src/component/LandingPageV2/WhoWeAre/style.css
@@ -71,4 +71,19 @@
         font-size: 5vh;
         line-height: 11.22vh;
     }
+    
+    .bluerectangle {
+        height: 20vh;
+    }
+
+    .purplerectangle {
+        height: 60vh;
+    }
+
+    .whoweareparagraph {
+        width: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        line-height: 3vh;
+    }
 }
